--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,19 @@
 app.version=1.0.0
 quarkus.http.port=${QUARKUS_HTTP_PORT:8080}
+
+# application.properties
+quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.datasource.db-kind=mariadb
+quarkus.hibernate-orm.log.sql=true
+#quarkus.datasource.db-kind=mariadb
+quarkus.datasource.username=toto
+quarkus.datasource.password=toto
+#quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/quarkus
+quarkus.datasource.devservices.db-name=test
+
+
+# Si tu utilises Dev Services, tu peux spécifier la version dans le fichier Docker
+quarkus.datasource.devservices.image-name=mariadb:11
+
+#quarkus.datasource.devservices.enabled=false
+quarkus.datasource.devservices.port=3306
