--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.datasource.username=toto
 quarkus.datasource.password=toto
 #quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/quarkus
-quarkus.datasource.devservices.db-name=test
+quarkus.datasource.devservices.db-name=usersdb
 
 
 # Si tu utilises Dev Services, tu peux spécifier la version dans le fichier Docker
