--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ quarkus.hibernate-orm.log.sql=true
 #quarkus.datasource.db-kind=mariadb
 quarkus.datasource.username=toto
 quarkus.datasource.password=toto
-#quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/quarkus
+quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/usersdb
 quarkus.datasource.devservices.db-name=usersdb
 
 
