de & prod properties updates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 app.version=1.0.0
-quarkus.http.port=${QUARKUS_HTTP_PORT:8080}
+%dev.app.title=UserMngt (DEV)
+%quarkus.http.port=${QUARKUS_HTTP_PORT:8080}
 
 # application.properties
-quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.datasource.db-kind=mariadb
-quarkus.hibernate-orm.log.sql=true
-#quarkus.datasource.db-kind=mariadb
-quarkus.datasource.username=toto
-quarkus.datasource.password=toto
-quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/usersdb
-quarkus.datasource.devservices.db-name=usersdb
+%dev.quarkus.hibernate-orm.database.generation=drop-and-create
+%dev.quarkus.datasource.db-kind=mariadb
+%dev.quarkus.hibernate-orm.log.sql=true
+%dev.quarkus.datasource.username=toto
+%dev.quarkus.datasource.password=toto
+%dev.quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/usersdb
+%dev.quarkus.datasource.devservices.db-name=usersdb
 
 
 # Si tu utilises Dev Services, tu peux spécifier la version dans le fichier Docker
@@ -17,3 +17,15 @@ quarkus.datasource.devservices.image-name=mariadb:11
 
 #quarkus.datasource.devservices.enabled=false
 quarkus.datasource.devservices.port=3306
+
+
+
+# Spécifique au profil 'prod'
+%prod.app.title=UserMngt (PROD)
+%prod.quarkus.hibernate-orm.database.generation=none
+#%prod.quarkus.datasource.db-kind=mariadb
+%prod.quarkus.hibernate-orm.log.sql=false
+%prod.quarkus.datasource.db-kind=mariadb
+%prod.quarkus.datasource.jdbc.url=${DB_URL}
+%prod.quarkus.datasource.username=${DB_USER}
+%prod.quarkus.datasource.password=${DB_PASSWORD}
